--- a/src/components/pages/CardList/CardList.module.css
+++ b/src/components/pages/CardList/CardList.module.css
@@ -3,6 +3,13 @@
     flex: 1;
 }
 
+.title {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+}
+
 .content {
     display: flex;
     box-sizing: border-box;
